--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
   "name": "md-links",
+  "author": "Daiane dos Anjos",
+  "license": "ISC",
   "version": "0.1.0",
+  "main": "src/index.js",
+  "type": "module",
   "engines": {
     "node": ">=16.x"
+  },
+  "bin": {
+    "md-links": "./src/cli.js"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "bootcamp": {
     "createdAt": "2023-03-30T13:20:37.337Z",
     "version": "5.6.0",
     "commit": "ffa75c8b2bede153844195479abeff01f3e34227"
+  },
+  "dependencies": {
+    "babel": "^6.23.0",
+    "chalk": "^4.1.2",
+    "eslint": "^8.40.0",
+    "figlet": "^1.6.0",
+    "jest": "^29.5.0",
+    "node-fetch": "^2.6.11"
+  },
+  "scripts": {
+    "build": "",
+    "pretest": "npm run eslint",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --coverage",
+    "type": "module",
+    "eslint": "eslint --fix --ext .js src/"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.5"
   }
 }
